THRIFT-1318 Incorrect syntax for struct with enum property and default value when value is negative

Patch: Jens Geyer, Thunder Stumpges